--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@
 name: Hprofile Actions
 on: workflow_dispatch
 env: 
-  AWS_REGION: us-east-1
+  AWS_REGION:us-east-1
 jobs:
   Testing:
     runs-on: ubuntu-latest
@@ -59,7 +59,7 @@ jobs:
          access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
          secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
          registry: ${{ secrets.REGISTRY }}
-         repo: actappact-app-registry
+         repo: act-app-registry
          region: ${{ env.AWS_REGION }}
          tags: latest,${{ github.run_number }}
          daemon_off: false
